# Excpres

backend/: .dockerignore  .gitignore  README.md  pyproject.toml
backend/excpres/: __init__.py  main.py  test_results.json
backend/excpres/llm/: excel_analyzer.py  llm.py
backend/tests/: __init__.py  test_main.py
