[tool.poetry]
name = "excpres"
version = "0.1.0"
description = "A Python project"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "excpres"}]

[tool.poetry.dependencies]
python = "^3.8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 