[tool.poetry]
name = "excpres"
version = "0.1.0"
description = "A Python project"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "excpres"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.3.0"
numpy = "^2.3.1"
scipy = "^1.16.0"
openpyxl = "^3.1.5"
openai = "^1.93.0"
anthropic = "^0.55.0"
fastapi = "^0.115.14"
uvicorn = "^0.35.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 